Version 7.0
- Added Configurable Blocks that bouncy balls can bounce on
- Added New Improved Husky Core
- Updated the Edit BouncyBall Menu
- Improved the commands
- Improved the particle system
- Improved the projectile System
- Did a bug recode of the plugin